# tilepack

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SPEC.md  rustfmt.toml
.github/workflows/: ci.yaml  publish-tiler-manual.yaml  publish.yaml
crates/tilepack/: Cargo.toml
crates/tilepack-tiler/: Cargo.toml
crates/tilepack-tiler/examples/: convert.rs  depth_webp_to_cubemap_tpc.rs  inspect.rs  repack.rs  rgbi.rs
crates/tilepack-tiler/src/: compose.rs  decode.rs  encode.rs  lib.rs  pano.rs  planar.rs  pyramid.rs  raster.rs  repack.rs  slab.rs
crates/tilepack-tiler/src/remap/: coords.rs  mod.rs
crates/tilepack-tiler/tests/: compose.rs  convert.rs  orientation.rs  raster.rs  repack.rs
crates/tilepack/examples/: gen_golden.rs
crates/tilepack/src/: cube.rs  descriptor.rs  error.rs  header.rs  layout.rs  lib.rs  reader.rs  split16.rs  writer.rs
crates/tilepack/tests/: cube.rs  golden.rs  layout_oracle.rs  robustness.rs  roundtrip.rs
docs/: integration.md
fixtures/: golden.tpc
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_front_matter.rs
