[package]
name = "tilepack-tiler"
version = "0.1.0"
description = "Native converter, repack, and composition tools for the tilepack container format."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["repack"]
# Lossless remux of existing DZP/SZI (Deep Zoom in ZIP) archives into tilepack.
repack = ["dep:zip", "dep:quick-xml"]

[dependencies]
tilepack = { workspace = true }
thiserror = { workspace = true }
zip = { version = "6", default-features = false, features = ["deflate"], optional = true }
quick-xml = { version = "0.37", optional = true }

[dev-dependencies]
zip = { version = "6", default-features = false }
