[package]
name = "tilepack-tiler"
version = "0.1.0"
description = "Native converter, repack, and composition tools for the tilepack container format."
keywords = ["tiles", "pyramid", "panorama", "webp", "geospatial"]
categories = ["encoding", "science::geo", "multimedia::images"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["repack", "convert"]
# Lossless remux of existing DZP/SZI (Deep Zoom in ZIP) archives into tilepack.
repack = ["dep:zip", "dep:quick-xml"]
# Depth-only conversion: equirect->cube remap + depthpack encode + composition.
# The lightweight subset for producers that only emit depth (e.g.
# pointcloud-utils) — pulls in depthpack + rayon but NOT libwebp/cc.
depth = ["dep:depthpack", "dep:rayon"]
# Source-image conversion: decode, equirect->cube remap, pyramid, tile encode.
# Supersets `depth`.
convert = ["depth", "dep:zune-jpeg", "dep:png", "dep:fast_image_resize", "dep:webp", "dep:pulp", "dep:bytemuck"]
# Swap JPEG decode to libjpeg-turbo (faster than the pure-Rust zune-jpeg;
# needs a C toolchain + nasm). Native ingest pipelines want this.
turbojpeg = ["dep:turbojpeg"]

[dependencies]
tilepack = { workspace = true }
thiserror = { workspace = true }
zip = { version = "6", default-features = false, features = ["deflate"], optional = true }
quick-xml = { version = "0.37", optional = true }
zune-jpeg = { version = "0.4", optional = true }
png = { version = "0.17", optional = true }
fast_image_resize = { version = "5", optional = true }
webp = { version = "0.3", optional = true }
pulp = { version = "0.21", optional = true }
bytemuck = { version = "1", optional = true }
rayon = { version = "1", optional = true }
# version enables crates.io publish; git rev (pinned in Cargo.lock) is used for local/dev builds.
depthpack = { version = "0.1", git = "https://github.com/360-geo/depthpack", optional = true }
turbojpeg = { version = "1", optional = true }

[dev-dependencies]
zip = { version = "6", default-features = false }
